<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.anair.disruptor.poc</groupId>
	<artifactId>disruptor-billing</artifactId>
	<packaging>war</packaging>
	<version>0.0.1</version>
	<name>disruptor-billing example Application</name>

	<developers>
		<developer>
			<name>Anoop Nair</name>
			<email>anoopnair.it@gmail.com</email>
		</developer>
	</developers>

	<inceptionYear>2014</inceptionYear>

	<properties>
		<java.version>1.8</java.version>
		<disruptor.spring.manager.version>0.0.1</disruptor.spring.manager.version>
		<spring.version>4.3.8.RELEASE</spring.version>
		<wmq.version>7.0.1.3</wmq.version> <!-- IBM Websphere MQ -->
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<dependencies>
					<dependency>
						<groupId>javax.jms</groupId>
						<artifactId>jms</artifactId>
						<version>1.1</version>
						<scope>compile</scope>
					</dependency>
					<dependency>
						<groupId>com.ibm</groupId>
						<artifactId>com.ibm.mqjms</artifactId>
						<version>${wmq.version}</version>
						<type>jar</type>
						<scope>compile</scope>
					</dependency>
					<dependency>
						<groupId>com.ibm</groupId>
						<artifactId>com.ibm.mq</artifactId>
						<version>${wmq.version}</version>
						<type>jar</type>
						<scope>compile</scope>
					</dependency>
					<dependency>
						<groupId>com.ibm</groupId>
						<artifactId>com.ibm.dhbcore</artifactId>
						<version>${wmq.version}</version>
						<type>jar</type>
						<scope>compile</scope>
					</dependency>
					<dependency>
						<groupId>com.ibm</groupId>
						<artifactId>com.ibm.mq.jmqi</artifactId>
						<version>${wmq.version}</version>
						<type>jar</type>
						<scope>compile</scope>
					</dependency>
				</dependencies>
				<configuration>
					<systemProperties>
						<JAVA_OPTS>-Xms512m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
		<finalName>disruptor-billing</finalName>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
			<type>jar</type>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-aop</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>aopalliance</artifactId>
					<groupId>aopalliance</groupId>
				</exclusion>
				<exclusion>
					<artifactId>spring-context</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
				<exclusion>
					<artifactId>spring-core</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
				<exclusion>
					<artifactId>spring-beans</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jms</artifactId>
			<version>${spring.version}</version>
			<type>jar</type>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<artifactId>spring-context</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
				<exclusion>
					<artifactId>spring-core</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
				<exclusion>
					<artifactId>spring-beans</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.anair.disruptor</groupId>
			<artifactId>disruptor-spring-manager</artifactId>
			<version>${disruptor.spring.manager.version}</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.25</version>
		</dependency>

	</dependencies>
</project>
